2000-12-17 Georg Fleischmann

	* gui/Source/NSView.m ([NSView -setFrameSize:]):
	scale bounds, if necessary
	* gui/Source/NSView.m ([NSView -scaleUnitSquareSize:]):
	scale from bounds instead of frame (like OpenStep)

Sun Dec 17 14:32:11 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSCell.m ([-_nonAutoreleasedTypingAttributes]): New
	method replacing ([-_typingAttributes]), to reduce the number of
	concurrent typing dictionaries allocated.
	([-attributedStringValue]), ([-_sizeText:]),
	([-_drawText:inFrame:]): Updated for the new method.

Sat Dec 16 22:45:32 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSLayoutManager.m ([GSTextContainerLayoutInfo -dealloc]):
	Release the text container.  ([NSLayoutManager -setTextStorage:]):
	Do not retain the text storage.
	* Source/NSTextContainer.m ([-dealloc]): Implemented.
	([-setLayoutManager:]): Do not retain the layout manager.
	* Headers/gnustep/gui/NSText.h: Added flags owns_text_network 
	and is_in_dealloc.
	* Source/NSText.m ([NSText -initWithFrame:]): Release self to
	break the retain cycle.  ([NSText -dealloc]): Manage the very
	special case in which we own the text network.
	([-encodeWithCoder:]): Do not encode the other text classes.
	([-initWithCoder:]): Always build up the text network; added
	release self as in [-initWithFrame:].  ([-setTextContainer:]): Do
	not retain the text objects.  ([-buildUpTextNetwork:]): Rewritten.
	* Source/NSTextView.m ([-replaceTextContainer:]): Do not retain 
	the text container.

2000-12-16  Fred Kiefer  <FredKiefer@gmx.de>

	* Headers/gnustep/gui/NSApplication.h:
	Prefixed all ivars with underscores, removed unneeded ivars and
	added some missing methods.
	* Source/NSApplication.m 
	Adopted to changes in header file. [initialize] Cache the
	notification center and the NSAutoreleasePool class for the whole
	file. [finishLaunching] set the image before starting the icon
	view. Recognize file to open with flag @"NSOpen" beside @"GSFilePath".